# Web_application

./: README.md  pyproject.toml
info/lesson_07/code/: registry.py
info/lesson_07/code/database/: data_mapper.py  unit_of_work_sqlite.py
lesson_01/: run.py  templator.py  wsgi.py
lesson_01/mvc_framework/: main.py  middleware.py  templator.py  urls.py  view.py
lesson_01/templates/: stub.html
lesson_02/: run.py
lesson_02/mvc_framework/: config.py  main.py  middleware.py  request.py  response.py  routers.py  tempCodeRunnerFile.py  templator.py  urls.py  view.py  views.py
lesson_03/: README.md  pyproject.toml
lesson_03/mvc_framework/: config.py  main.py  middleware.py  templator.py  views.py
lesson_03/mvc_framework/templates/: base.html
lesson_03/templates/: index.html
lesson_04/: run.py
lesson_04/mvc_framework/: main.py  response.py  routers.py  views.py
lesson_04/mvc_framework/templates/: about.html  inc-menu.html
